# piggylike-rs

./: .gitignore  cargo.toml
engine/: Cargo.toml
engine/assets/: bush.glb  stone.glb
engine/crates/core/: Cargo.toml
engine/crates/core/src/: lib.rs
engine/crates/editor/: Cargo.toml
engine/crates/editor/examples/: editor.rs
engine/crates/editor/src/: lib.rs
engine/crates/map/: Cargo.toml
engine/crates/map/src/: lib.rs
engine/crates/metadata/: Cargo.toml
engine/crates/metadata/src/: lib.rs
engine/crates/smart_camera/: Cargo.toml
engine/crates/smart_camera/src/: lib.rs
engine/crates/tilemap/: Cargo.toml
engine/examples/: camera.rs
engine/old/: cleanup.rs  draw.rs  input.rs  map.rs  physics.rs  sprite.rs  tilemap.rs
engine/src/: atlas.rs  camera.rs  cleanup.rs  command.rs  draw.rs  engine.rs  history.rs  input.rs  lib.rs  map.rs  physics.rs  script.rs  snapshot.rs  texture_atlas.rs  thing.rs  tilemap.rs  world.rs
engine/src/components/: body.rs  cam.rs  controller.rs  mod.rs  player.rs  thing.rs  tilesprite.rs  velocity.rs
engine/src/events/: mod.rs  touch.rs
engine/src/map/: mod.rs
engine/src/metadata/: defs.rs  mod.rs
engine/src/resources/: config.rs  history.rs  metadata.rs  mod.rs  scriptvm.rs  snapshot.rs  tilemap.rs
engine/src/script/: api.rs  mod.rs  systems.rs
engine/src/systems/: build.rs  camera.rs  controller.rs  history.rs  input.rs  interpolation.rs  mod.rs  physics.rs  proximity.rs  render.rs  snapshot.rs  spawn.rs  touch.rs
engine/src/thing/: body.rs  controller.rs  mod.rs  player.rs
engine/src/tiled/: mod.rs
(+64 files in other folders)
