[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.23"
macroquad-tiled = "0.1.1"
notify = "4.0.17"
generational-arena = { version = "0.2.8", features = ["serde"] }
parry2d = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.14", features = ["serde"] }
serde_json = "1.0.82"

rune = "0.12.0"
rune-modules = "0.12.0"