[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
tiled = "0.10.2"
parry2d = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
rune = "0.12.0"
rune-modules = "0.12.0"
bevy_mod_raycast = "0.6.0"