[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
tiled = "0.10.2"
parry2d = "0.9.0"
serde  = { workspace = true }
serde_json = { workspace = true }
rune = "0.12.0"
rune-modules = "0.12.0"
smart_camera = { path = "crates/smart_camera" }